--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="bg-success p-a-1 text-xs-center">
-  This is SportsStore
-</div>
+<app-store></app-store>
