--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,9 +1,10 @@
-<div class="navbar navbar-dark bg-dark">
+<div class="navbar navbar-dark bg-light">
     <a class="navbar-brand">SPORTS STORE</a>
+    <app-cart-summary></app-cart-summary>
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-3 bg-info p-3">
+        <div class="col-md-3 bg-light p-3">
             <button class="btn btn-block btn-outline-primary"
                     [class.active]="selectedCategory === null"
                     (click)="changeCategory()">
@@ -26,7 +27,13 @@
                                 {{product.price | currency:"USD":true:"2.2-2"}}
                             </span>
                         </h4>
-                        <div class="card-text p-3">{{product.description}}</div>
+                        <div class="card-text p-3">
+                            {{product.description}}
+                            <button class="btn btn-success btn-sm float-right"
+                                    (click)="addProductToCart(product)">
+                                Add to cart
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
